# syclEmbreeRayIntersetction

./: CMakeLists.txt  README.md  run.sh
src/: Test.cpp  test.cpp
